<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/team_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="72dp"
    android:orientation="horizontal"
    android:background="@drawable/shape_border"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingEnd="8dp"
                android:paddingStart="2dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        <TextView
            android:id="@+id/teamTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingEnd="8dp"
            android:paddingStart="2dp"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingEnd="8dp"
                android:paddingStart="2dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="2dp"
            android:textColor="@color/colorAccent" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/lost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingEnd="8dp"
                    android:paddingStart="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:paddingEnd="8dp"
            android:paddingStart="2dp"
            android:textColor="@color/colorAccentDark" />

    </LinearLayout>
        </LinearLayout>





</LinearLayout>